// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleRefinement expect to render with a negative currentRefinement 1`] = `
<div
  className="ais-ToggleRefinement"
>
  <label
    className="ais-ToggleRefinement-label"
  >
    <input
      checked={false}
      className="ais-ToggleRefinement-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ais-ToggleRefinement-labelText"
    >
      toggle the refinement
    </span>
  </label>
</div>
`;

exports[`ToggleRefinement expect to render with a positive currentRefinement 1`] = `
<div
  className="ais-ToggleRefinement"
>
  <label
    className="ais-ToggleRefinement-label"
  >
    <input
      checked={true}
      className="ais-ToggleRefinement-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ais-ToggleRefinement-labelText"
    >
      toggle the refinement
    </span>
  </label>
</div>
`;

exports[`ToggleRefinement expect to render with custom className 1`] = `
<div
  className="ais-ToggleRefinement MyCustomToggleRefinement"
>
  <label
    className="ais-ToggleRefinement-label"
  >
    <input
      checked={true}
      className="ais-ToggleRefinement-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ais-ToggleRefinement-labelText"
    >
      toggle the refinement
    </span>
  </label>
</div>
`;
